# pass-store-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: CoreTest.yml  codeql-analysis.yml  rust.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: constants.rs  main.rs  util.rs
cli/src/command/: cp.rs  edit.rs  find.rs  generate.rs  git.rs  grep.rs  init.rs  insert.rs  ls.rs  mod.rs  mv.rs  rm.rs  shell.rs  show.rs
cli/src/fuzzy/: mod.rs
cli/src/parser/: mod.rs  sub_command.rs
cli/src/util/: mod.rs
cli/tests/: pars_test.rs  test-config.toml
completion/pwsh/: ParsCompletion.psm1
completions/pwsh/: ParsCompletion.psd1  ParsCompletion.psm1
config/cli/: pars_config.toml
core/: .rustfmt.toml  Cargo.toml
core/src/: constants.rs  lib.rs
core/src/bundle/: mod.rs
core/src/clipboard/: mac.rs  mod.rs  wayland.rs  windows.rs  xorg.rs
core/src/clipboard/unix/: wayland.rs  xorg.rs
core/src/config/: cli.rs  loader.rs  mod.rs
core/src/crypto/: decrypt.rs  encrypt.rs  key_management.rs  mod.rs
core/src/git/: commit.rs  mod.rs
core/src/gpg/: crypto.rs  key_management.rs  mod.rs  utils.rs
core/src/operation/: copy_or_rename.rs  edit.rs  find.rs  generate.rs  git.rs  grep.rs  init.rs  insert.rs  ls.rs  ls_or_show.rs  mod.rs  remove.rs  rename.rs  rename_or_copy.rs  show.rs
core/src/pgp/: crypto.rs  key_management.rs  mod.rs  utils.rs
core/src/util/: cross_platform.rs  defer.rs  fs_util.rs  fs_utils.rs  gpg_utils.rs  log.rs  mod.rs  rand.rs  str.rs  test_util.rs  test_utils.rs  tree.rs
core/src/util/tree/: convert.rs  mod.rs  print.rs
gui/: README.md  pubspec.yaml
gui/android/app/: build.gradle.kts
gui/android/app/src/main/: AndroidManifest.xml
gui/android/app/src/main/kotlin/top/vollate/pars_gui/: MainActivity.kt
gui/ios/Runner/: Info.plist
gui/ios/Runner.xcodeproj/: project.pbxproj
gui/lib/: main.dart
gui/linux/: CMakeLists.txt
gui/linux/runner/: my_application.cc
gui/macos/Runner.xcodeproj/: project.pbxproj
gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/macos/Runner/Configs/: AppInfo.xcconfig
gui/test/: widget_test.dart
gui/windows/: CMakeLists.txt
gui/windows/runner/: Runner.rc  main.cpp
script/: pre_commit.ps1  pre_commit.sh
scripts/: pre_commit.ps1  pre_commit.sh
