[package]
name = "pars-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.26"
pars-core = { path = "../core" }
secrecy = "0.10.3"


[[bin]]
name = "pars"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
