[package]
name = "pass-store-rs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
colored = "2.2.0"
fs_extra = "1.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
parking_lot = "0.12.3"
pgp = { version = "0.14.2", optional = true }
rand = "0.8.5"
regex = "1.11.1"
secrecy = "0.10.3"
zeroize = "1.8.1"

[features]
default = []
git = []
gpg = ["pgp"]

[dev-dependencies]
os_pipe = "1.2.1"
serial_test = "3.2.0"
pretty_assertions = "1.4.1"
