[package]
name = "pars-core"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Pars(a zx2c4-pass compatible passwords manager) core library"
authors = ["Vollate <uint44t@gmail.com>"]


[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
fs_extra = "1.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
parking_lot = "0.12.3"
passwords = "3.1.16"
rand = "0.9.0"
regex = "1.11.1"
secrecy = "0.10.3"
tempfile = "3.18.0"
zeroize = "1.8.1"
bumpalo = { version = "3.17.0", features = ["collections"] }
walkdir = "2.5.0"
os_pipe = "1.2.1"
clean-path = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
anyhow = "1.0.97"
toml = "0.8.20"
unicode-segmentation = "1.12.0"

[features]
default = []

[dev-dependencies]
serial_test = "3.2.0"
pretty_assertions = "1.4.1"
